--- a/video.html
+++ b/video.html
@@ -19,13 +19,10 @@
             margin-bottom: 5px;
         }
         /*Use CSS before property to display the image before the text in the buttons*/
+        /* source: https://developer.mozilla.org/en-US/docs/Web/CSS/::before */
         
         .play:before {
             content: "▶"
-            /* box-sizing: border-box;
-            height: 10px;
-            border-width: 10px 0px 10px 15px;
-            border-color: transparent transparent transparent #202020; */
         }
         
         .pause::before {
